--- a/boards/x86_64/obm_x86_64_efi_defconfig
+++ b/boards/x86_64/obm_x86_64_efi_defconfig
@@ -1,7 +1,10 @@
 BR2_x86_64=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_1=y
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
+BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
+BR2_TARGET_LOCALTIME="Europe/Paris"
+BR2_ROOTFS_OVERLAY="$(TOPDIR)/../boards/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(TOPDIR)/board/pc/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(TOPDIR)/board/pc/post-image-efi.sh"
 BR2_LINUX_KERNEL=y
@@ -31,13 +34,21 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
 BR2_PACKAGE_ACPID=y
+BR2_PACKAGE_DBUS_BROKER=y
+BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CONNMAN=y
 BR2_PACKAGE_CONNMAN_WIFI=y
 BR2_PACKAGE_CONNMAN_CLIENT=y
+BR2_PACKAGE_OPENSSH=y
+BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_WIRELESS_REGDB=y
+BR2_PACKAGE_DOCKER_CLI_STATIC=y
+BR2_PACKAGE_DOCKER_CLI_BUILDX=y
+BR2_PACKAGE_DOCKER_COMPOSE=y
+BR2_PACKAGE_DOCKER_ENGINE=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="500M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_GRUB2=y
 BR2_TARGET_GRUB2_X86_64_EFI=y
