--- a/boards/x86_64/obm_x86_64_efi_defconfig
+++ b/boards/x86_64/obm_x86_64_efi_defconfig
@@ -4,7 +4,7 @@ BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
 BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_TARGET_LOCALTIME="Europe/Paris"
-BR2_ROOTFS_OVERLAY="$(TOPDIR)/../boards/overlay"
+BR2_ROOTFS_OVERLAY="$(TOPDIR)/../boards/x86_64/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(TOPDIR)/board/pc/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(TOPDIR)/board/pc/post-image-efi.sh"
 BR2_LINUX_KERNEL=y
