add domain suffix to fullchain cert name & txt counters

--- a/netbox/netbox-docker-src/nginx.conf
+++ b/netbox/netbox-docker-src/nginx.conf
@@ -5,7 +5,7 @@ http {
     listen 8443 ssl;
     server_name netbox.dromotherm.com;
 
-    ssl_certificate     /etc/nginx/certs/fullchain.cer;
+    ssl_certificate     /etc/nginx/certs/netbox.dromotherm.com-fullchain.cer;
     ssl_certificate_key /etc/nginx/certs/netbox.dromotherm.com.key;
 
     location / {
